# cakedb

./: Cargo.toml  LICENSE  README.md
src/: bincode_wrapper.rs  error.rs  lib.rs  prelude.rs  save.rs  test.rs
src/generic/: batch_writes.rs  internal.rs  mod.rs  multimap_reads.rs  multimap_writes.rs  reads.rs  traits.rs  writes.rs
