[package]
name = "cakedb"
version = "0.1.0"
edition = "2021"
authors = ["DnlMcn <haomakk.himself@gmail.com>"]
description = "An easy-to-use wrapper over `redb`"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["database", "embedded", "easy", "redb"]
categories = ["database-interfaces"]

[dependencies]
anyhow = "1.0.99"
bincode = "2.0.1"
derive_more = { version = "2.0.1", features = ["debug"] }
directories = "6.0.0"
nanoid = "0.4.0"
redb = "3.0.0"
serde = "1.0.219"
serde_derive = "1.0.219"
tempfile = "3.20.0"
time = "0.3.41"
